[package]
name = "mini-games-discord-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.15"
prettytable-rs = "0.8.0"
redis = { version = "0.20.2", features = ["tokio-comp"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["full"] }
twilight-cache-inmemory = "0.5.0"
twilight-command-parser = "0.5.0"
twilight-gateway = "0.5.0"
twilight-http = "0.5.0"
twilight-model = "0.5.0"
